--- a/project_1/6. LightGBM.ipynb
+++ b/project_1/6. LightGBM.ipynb
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 9802, number of negative: 37656\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.016325 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.017803 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 26697\n",
       "[LightGBM] [Info] Number of data points in the train set: 47458, number of used features: 197\n",
@@ -187,7 +187,16 @@
       "Accuracy: 0.7753476611883692\n",
       "Precision: 0.47295004712535343\n",
       "Recall: 0.7679828588919498\n",
-      "F1 Score: 0.5853943070461969\n"
+      "F1 Score: 0.5853943070461969\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.78      0.85     12553\n",
+      "           1       0.47      0.77      0.59      3267\n",
+      "\n",
+      "    accuracy                           0.78     15820\n",
+      "   macro avg       0.70      0.77      0.72     15820\n",
+      "weighted avg       0.83      0.78      0.79     15820\n",
+      "\n"
      ]
     }
    ],
@@ -214,7 +223,8 @@
     "print(\"Accuracy:\", accuracy_score(y_valid, y_valid_pred_new))\n",
     "print(\"Precision:\", precision_score(y_valid, y_valid_pred_new))\n",
     "print(\"Recall:\", recall_score(y_valid, y_valid_pred_new))\n",
-    "print(\"F1 Score:\", f1_score(y_valid, y_valid_pred_new))\n"
+    "print(\"F1 Score:\", f1_score(y_valid, y_valid_pred_new))\n",
+    "print(classification_report(y_valid, y_valid_pred_new))\n"
    ]
   },
   {
@@ -227,7 +237,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 9802, number of negative: 37656\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.014435 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.014098 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 26697\n",
       "[LightGBM] [Info] Number of data points in the train set: 47458, number of used features: 197\n",
@@ -237,6 +247,15 @@
       "Accuracy: 0.8421618204804046\n",
       "Precision: 0.7267373380447585\n",
       "Recall: 0.37771655953474137\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.78      0.85     12553\n",
+      "           1       0.47      0.77      0.59      3267\n",
+      "\n",
+      "    accuracy                           0.78     15820\n",
+      "   macro avg       0.70      0.77      0.72     15820\n",
+      "weighted avg       0.83      0.78      0.79     15820\n",
+      "\n",
       "F1 Score: 0.49707955689828803\n"
      ]
     }
@@ -260,71 +279,8 @@
     "print(\"Accuracy:\", accuracy_score(y_valid, y_valid_pred_tuned))\n",
     "print(\"Precision:\", precision_score(y_valid, y_valid_pred_tuned))\n",
     "print(\"Recall:\", recall_score(y_valid, y_valid_pred_tuned))\n",
+    "print(classification_report(y_valid, y_valid_pred_new))\n",
     "print(\"F1 Score:\", f1_score(y_valid, y_valid_pred_tuned))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best F1: 0.8725 at threshold: 0.3500000000000001\n",
-      "Best params: {'objective': 'binary', 'learning_rate': 0.05, 'num_leaves': 50, 'max_depth': 10, 'verbose': -1}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.metrics import f1_score\n",
-    "import lightgbm as lgb\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# 데이터 준비 (X_train, y_train)\n",
-    "X_train_full, X_val, y_train_full, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "param_grid = {\n",
-    "    'learning_rate': [0.05, 0.1],\n",
-    "    'num_leaves': [31, 50],\n",
-    "    'max_depth': [5, 10]\n",
-    "}\n",
-    "\n",
-    "best_f1 = 0\n",
-    "best_params = None\n",
-    "best_threshold = 0.5\n",
-    "\n",
-    "for lr in param_grid['learning_rate']:\n",
-    "    for leaves in param_grid['num_leaves']:\n",
-    "        for depth in param_grid['max_depth']:\n",
-    "            params = {\n",
-    "                'objective': 'binary',\n",
-    "                'learning_rate': lr,\n",
-    "                'num_leaves': leaves,\n",
-    "                'max_depth': depth,\n",
-    "                'verbose': -1\n",
-    "            }\n",
-    "            # LightGBM 데이터셋\n",
-    "            train_data = lgb.Dataset(X_train_full, label=y_train_full)\n",
-    "            model = lgb.train(params, train_data, num_boost_round=100)\n",
-    "            \n",
-    "            # 검증 데이터 확률 예측\n",
-    "            y_probs = model.predict(X_val)\n",
-    "            \n",
-    "            # 임계값을 여러개 시도\n",
-    "            thresholds = np.arange(0.1, 0.9, 0.05)\n",
-    "            for thr in thresholds:\n",
-    "                y_pred = (y_probs >= thr).astype(int)\n",
-    "                f1 = f1_score(y_val, y_pred)\n",
-    "                if f1 > best_f1:\n",
-    "                    best_f1 = f1\n",
-    "                    best_params = params\n",
-    "                    best_threshold = thr\n",
-    "\n",
-    "print(f'Best F1: {best_f1:.4f} at threshold: {best_threshold}')\n",
-    "print(f'Best params: {best_params}')\n"
    ]
   },
   {
@@ -333,6 +289,133 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 9802, number of negative: 37656\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.016886 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 26697\n",
+      "[LightGBM] [Info] Number of data points in the train set: 47458, number of used features: 197\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.206541 -> initscore=-1.345906\n",
+      "[LightGBM] [Info] Start training from score -1.345906\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Info] Number of positive: 9802, number of negative: 37656\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.016230 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 26697\n",
+      "[LightGBM] [Info] Number of data points in the train set: 47458, number of used features: 197\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.206541 -> initscore=-1.345906\n",
+      "[LightGBM] [Info] Start training from score -1.345906\n",
+      "== Ensemble Results ==\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9285    0.7775    0.8463     12553\n",
+      "           1     0.4738    0.7698    0.5866      3267\n",
+      "\n",
+      "    accuracy                         0.7759     15820\n",
+      "   macro avg     0.7011    0.7737    0.7164     15820\n",
+      "weighted avg     0.8346    0.7759    0.7927     15820\n",
+      "\n",
+      "Accuracy: 0.7759165613147914\n",
+      "Precision: 0.4738131122833459\n",
+      "Recall: 0.7698194061830426\n",
+      "F1 Score: 0.5865889212827988\n",
+      "ROC-AUC: 0.8501323839019284\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report, f1_score, recall_score, precision_score, roc_auc_score\n",
+    "import lightgbm as lgb\n",
+    "\n",
+    "# 1. 데이터 준비\n",
+    "X = df_train.drop(columns=['success_label', 'title', 'language'])\n",
+    "y = df_train['success_label']\n",
+    "X_test = df_test.copy()\n",
+    "\n",
+    "# 2. 특수문자 컬럼명 처리\n",
+    "def clean_column_names(df):\n",
+    "    df.columns = df.columns.str.replace(r'[,\\s/\\\\]', '_', regex=True)\n",
+    "    return df\n",
+    "\n",
+    "X = clean_column_names(X)\n",
+    "X_test = clean_column_names(X_test)\n",
+    "\n",
+    "# 3. train/validation 분할\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(\n",
+    "    X, y, test_size=0.25, random_state=26, stratify=y\n",
+    ")\n",
+    "\n",
+    "# 4. 기본 모델 (Model A)\n",
+    "model_base = lgb.LGBMClassifier(\n",
+    "    n_estimators=100,\n",
+    "    max_depth=6,\n",
+    "    learning_rate=0.1,\n",
+    "    subsample=0.8,\n",
+    "    colsample_bytree=0.8,\n",
+    "    random_state=42\n",
+    ")\n",
+    "model_base.fit(X_train, y_train)\n",
+    "proba_base = model_base.predict_proba(X_valid)[:, 1]\n",
+    "\n",
+    "# 5. 튜닝 모델 (Model B)\n",
+    "model_tuned = lgb.LGBMClassifier(\n",
+    "    n_estimators=200,\n",
+    "    max_depth=8,\n",
+    "    learning_rate=0.05,\n",
+    "    subsample=0.7,\n",
+    "    colsample_bytree=0.7,\n",
+    "    random_state=42\n",
+    ")\n",
+    "model_tuned.fit(X_train, y_train)\n",
+    "proba_tuned = model_tuned.predict_proba(X_valid)[:, 1]\n",
+    "\n",
+    "# 6. Threshold 모델은 base 모델 기반으로 threshold만 조정 (Model C == Model A)\n",
+    "proba_thresh = proba_base.copy()  # 따로 훈련 안 함\n",
+    "\n",
+    "# 7. 앙상블 (soft voting)\n",
+    "final_proba = (proba_base + proba_thresh + proba_tuned) / 3\n",
+    "\n",
+    "# 8. Threshold 설정 및 예측\n",
+    "threshold = 0.21\n",
+    "final_preds = (final_proba >= threshold).astype(int)\n",
+    "\n",
+    "# 9. 평가 출력\n",
+    "print(\"== Ensemble Results ==\")\n",
+    "print(classification_report(y_valid, final_preds, digits=4))\n",
+    "print(\"Accuracy:\", np.mean(final_preds == y_valid))\n",
+    "print(\"Precision:\", precision_score(y_valid, final_preds))\n",
+    "print(\"Recall:\", recall_score(y_valid, final_preds))\n",
+    "print(\"F1 Score:\", f1_score(y_valid, final_preds))\n",
+    "print(\"ROC-AUC:\", roc_auc_score(y_valid, final_proba))  # 확률 기반\n",
+    "\n",
+    "# (선택) 추후 X_test에도 final_proba 적용 가능\n",
+    "# test_proba_base = model_base.predict_proba(X_test)[:, 1]\n",
+    "# test_proba_tuned = model_tuned.predict_proba(X_test)[:, 1]\n",
+    "# test_final_proba = (test_proba_base + test_proba_base + test_proba_tuned) / 3\n",
+    "# test_preds = (test_final_proba >= threshold).astype(int)\n"
+   ]
   },
   {
    "cell_type": "code",
