--- a/project_1/6. 전체모델링_확인용.ipynb
+++ b/project_1/6. 전체모델링_확인용.ipynb
@@ -19,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fa617c42-e0e6-4e24-b3a9-5898ede1ee81",
    "metadata": {},
@@ -38,6 +39,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "02613627-88c7-44e6-846f-b3783fdd7458",
    "metadata": {},
@@ -67,6 +69,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0057fa37-52b9-4495-810f-2aa18a3230ec",
    "metadata": {},
@@ -95,6 +98,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fc4ca5be-6700-4baa-8bb8-43d991885d34",
    "metadata": {},
@@ -115,6 +119,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "59121b04-9b87-4e56-aacc-c63c5f365ade",
    "metadata": {},
@@ -158,6 +163,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d9b15acd-5720-41da-be38-cd1e65704e6b",
    "metadata": {},
@@ -198,6 +204,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "533f978f-26dc-4a6c-be91-2b98dfb1849e",
    "metadata": {},
@@ -235,6 +242,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ad2f394c-15c7-49c0-be39-1c766f528566",
    "metadata": {},
@@ -521,6 +529,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "51088b0e-66f6-4682-a85b-5835a612050b",
    "metadata": {},
@@ -560,6 +569,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "11d9c4a5-8661-4d7f-b012-59eac697137a",
    "metadata": {},
@@ -608,6 +618,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "132b61f1-9498-4728-bd0a-4eccde881870",
    "metadata": {},
@@ -648,6 +659,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "74e315d6-e3ea-44bf-b591-16ed9a8aaab6",
    "metadata": {},
@@ -685,6 +697,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "daaf2c78-427f-4c57-8bf4-e33a679d587c",
    "metadata": {},
@@ -1294,6 +1307,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ebaed8b1-3fb0-48e7-978b-89cc93dce672",
    "metadata": {},
@@ -1335,6 +1349,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4a08aaca-7f1d-4fca-a244-831ba0298611",
    "metadata": {},
